--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url(img/img.jpg);
+    background: url(img/7.JPG);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
