--- a/style.css
+++ b/style.css
@@ -31,7 +31,19 @@ body{
     margin-top: 60px;
 }
 
-.img-tiv .tiv{
+.img-tiv .tiv1{
+    background-color: #fff;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 3px solid rgb(0, 0, 0, 0.5);
+    margin-top: 20px;
+    transition: transform 0.3s ease;
+}
+
+
+.img-tiv .tiv2{
+   color: white;
     width: 120px;
     height: 120px;
     border-radius: 50%;
@@ -41,7 +53,7 @@ body{
 }
 
 .h3{
-  font-size: 40px !important;
+   font-size: 40px !important;
     margin-top: 10% !important;
     color: white;
     font-family: "Saira", sans-serif;
